--- a/index.html
+++ b/index.html
@@ -1,22 +1,93 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>My First Page</title>
-    </head>
-    <body>
-        <h1>This is my spring break <a href="https://docs.google.com/document/d/13rtEIbbxua2NdVFlQkzaJjAH070uskU4OWXce6Y-z3U/edit?tab=t.0">itenrary </a></h1> <br><br>
-        <h2>Destination 1: London</h2>
-        <img src="london 1.jpg" width="300" alt="big ben">
-        <img src="london 2.jpg" width="300" alt="some catherdral">
-        <!-- This is a note-->
-        <p> I <b>LOVE</b> England's <i> <a href="https://www.britishmuseum.org/" target="_blank" >colonial history</i> </a> because my country was colonised. London will therefore be my first destination </p>
-        <h2> Destination 2: Ireland</h2>
-        <p> to explore more of England's's colonial past, my second desitination will be ireland</p>
-        <img src="ireland 1.jpg" width="300" alt="cliff">
-        <img src="ireland 2.jpg" width="300" alt="ruinl">
-        <p> we will fly to dublin for shits and giggles and take in the natural landscape and learn about the potato crisis stuff that happened there because of england</p>   
-        <h4> Now let's talk potatoes</h4>
-        <p>While it is widly reffered to as the great famine, for purposes of this current website, we refer to it as the Poatato Crisis. </p>
-        
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="ex2style.css">
+    <title>Exercise 2</title>
+</head>
+<body>
+    <h1>Ten Principles for Good Design</h1> <h3>by Dieter Rams</h3>
+
+    <section>
+        <img src="innovate.jpg" alt="Innovative Design Ellen Lupton">
+        <div>
+            <h2>1. Good design is innovative</h2>
+            <p>The possibilities for innovation are not, by any means, exhausted. Technological development is always offering new opportunities for innovative design. But innovative design always develops in tandem with innovative technology and can never be an end in itself.</p>
+        </div>
+    </section>
+
+    <section>
+        <img src="usefull.jpg" alt="Useful Design Example">
+        <div>
+            <h2>2. Good design makes a product useful</h2>
+            <p>A product is bought to be used. It has to satisfy certain criteria, not only functional, but also psychological and aesthetic. Good design emphasizes the usefulness of a product whilst disregarding anything that could possibly detract from it.</p>
+        </div>
+    </section>
+
+    <section>
+        <img src="aesthetic.jpg" alt="Aesthetic Design Example">
+        <div>
+            <h2>3. Good design is aesthetic</h2>
+            <p>The aesthetic quality of a product is integral to its usefulness because products we use every day affect our person and our well-being. But only well-executed objects can be beautiful.</p>
+        </div>
+    </section>
+
+    <section>
+        <img src="understand.jpg" alt="Understandable Design Example">
+        <div>
+            <h2>4. Good design makes a product understandable</h2>
+            <p>It clarifies the product's structure. Better still, it can make the product talk. At best, it is self-explanatory.</p>
+        </div>
+    </section>
+
+    <section>
+        <img src="unobstructive.jpg" alt="Unobtrusive Design Example">
+        <div>
+            <h2>5. Good design is unobtrusive</h2>
+            <p>Products fulfilling a purpose are like tools. They are neither decorative objects nor works of art. Their design should therefore be both neutral and restrained, to leave room for the user's self-expression.</p>
+        </div>
+    </section>
+
+    <section>
+        <img src="honest.jpg" alt="Honest Design Example">
+        <div>
+            <h2>6. Good design is honest</h2>
+            <p>It does not make a product more innovative, powerful, or valuable than it really is. It does not attempt to manipulate the consumer with promises that cannot be kept.</p>
+        </div>
+    </section>
+
+    <section>
+        <img src="longlast.jpg" alt="Long-Lasting Design Example">
+        <div>
+            <h2>7. Good design is long-lasting</h2>
+            <p>It avoids being fashionable and therefore never appears antiquated. Unlike fashionable design, it lasts many years - even in today's throwaway society.</p>
+        </div>
+    </section>
+
+    <section>
+        <img src="thorogh.jpg" alt="Thorough Design Example">
+        <div>
+            <h2>8. Good design is thorough down to the last detail</h2>
+            <p>Nothing must be arbitrary or left to chance. Care and accuracy in the design process show respect towards the user.</p>
+        </div>
+    </section>
+
+    <section>
+        <img src="enviro.jpg" alt="Environmentally Friendly Design Example">
+        <div>
+            <h2>9. Good design is environmentally-friendly</h2>
+            <p>Design makes an important contribution to the preservation of the environment. It conserves resources and minimizes physical and visual pollution throughout the lifecycle of the product.</p>
+        </div>
+    </section>
+
+    <section>
+        <img src="design.jpg" alt="Minimal Design Example">
+        <div>
+            <h2>10. Good design is as little design as possible</h2>
+            <p>Less, but better - because it concentrates on the essential aspects, and the products are not burdened with non-essentials.</p>
+        </div>
+    </section>
+
+</body>
 </html>
