--- a/HEARTSTOPPER/INDEX.HTML
+++ b/HEARTSTOPPER/INDEX.HTML
@@ -339,12 +339,12 @@
 
 <section class="playlist-section">
     <h2>Nick & Charlie’s Playlist</h2>
-    
   
 <div class="playlist-container">
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2McKhuVSUzsASw6n70FmGr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </div>
 
+</section>
 
 <!-- Merch Section -->
 <section id="merch" class="section">
