--- a/HEARTSTOPPER/INDEX.HTML
+++ b/HEARTSTOPPER/INDEX.HTML
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="logo-container">            <header>
-                <img src="heartsoper imageS/giphy.gif" alt="Heartstopper Logo" class="header-logo" loop="true">
+                <img src="heartsoperimages/giphy.gif" alt="Heartstopper Logo" class="header-logo" loop="true">
             </header>
             
             <nav> 
